Getting user dropdown working.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,8 @@ html
 
   body class="#{controller_name} #{action_name}"
 
+    / account_list must be before biola_header otherwise the list won't be defined in time.
+    = render 'layouts/account_list'
     = render 'frontend_toolkit/biola_header', enable_auth: true
 
     - unless (alerts = all_alerts).empty?
