--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,10 @@
 doctype html
-html
+html lang="en-us"
   head
     / handles default html head tags and csrf_meta_tags
     = render 'frontend_toolkit/head', title: 'WCMS'
     = stylesheet_link_tag "application", media: "all"
-
-    / Load Proxima Nova and Minion Pro
-    = javascript_include_tag '//use.typekit.net/zvt1wex.js'
-    javascript:
-      try{Typekit.load();}catch(e){}
+    = javascript_include_tag "application"
 
   body class="#{controller_name} #{action_name}"
 
@@ -16,22 +12,16 @@ html
     = render 'layouts/account_list'
     = render 'frontend_toolkit/biola_header', enable_auth: true
 
-    - unless (alerts = all_alerts).empty?
-      .container
-        #message_list
-          - alerts.each do |msg|
-            div.alert class=alert_class(msg[:type]) data-type=msg[:type]
-              a.close data-dismiss="alert" href="#" &times;
-              i> class=alert_icon(msg[:type])
-              = msg[:message]
-
     #body
+      = wcms_component('navigation/site_nav', { menu: [ \
+        {body: 'Page Editions', url: :page_editions_path},
+      ]})
+
+      = wcms_component('alerts/message_list')
+
       = yield
 
-    / = render 'frontend_toolkit/global_marketing_footer'
-    #footer
-      .container
-        .footer
-          p ♥ from the Biola Apps team
+    .container
+      .footer
+        p ♥ from the Biola Apps team
 
-    = javascript_include_tag "application"
