Turning pundit back on for page edition controller updating update action adding body to form

--- a/app/views/page_editions/_form.html.slim
+++ b/app/views/page_editions/_form.html.slim
@@ -15,6 +15,12 @@
           span.input-group-addon www.biola.edu/
           = f.text_field :slug, class: 'form-control'
 
+      hr
+
+      .form-group
+        = f.label :body
+        = f.text_area :body, class: 'form-control'
+
 
     .clearfix
     hr
