--- a/app/views/page_editions/_form.html.slim
+++ b/app/views/page_editions/_form.html.slim
@@ -1,32 +1,50 @@
 = form_for @page_edition do |f|
-  .row.form-section
-    .col-md-6
-      .form-group
-        = f.label :title
-        = f.text_field :title, class: 'form-control'
+  .form-section
+    .form-group
+      = f.label :title
+      = f.text_field :title, class: 'form-control'
 
-      .form-group
-        = f.label :site
-        = f.collection_select :site, Site.all, :id, :to_s, {}, class: 'form-control'
+    .form-group
+      = f.label :site
+      = f.collection_select :site, Site.all, :id, :url, {}, class: 'form-control'
 
-      .form-group
-        = f.label :slug
-        .input-group
-          span.input-group-addon www.biola.edu/
-          = f.text_field :slug, class: 'form-control'
+    .form-group
+      = f.label :slug
+      .input-group
+        span.input-group-addon#site_url_preview = "#{(f.object.site || Site.first).url}/"
+        = f.text_field :slug, class: 'form-control'
 
-      hr
+    .form-group
+      = f.label :page_template
+      = f.text_field :page_template, class: 'form-control'
 
-      .form-group
-        = f.label :body
-        = f.text_area :body, class: 'form-control'
-
-
-    .clearfix
+  .form-section
+    br
+    h3 Page Content
     hr
 
+    .form-group
+      = f.label :body
+      = f.text_area :body, class: 'form-control'
+
+    .form-group
+      - if f.object.presentation_data_template.present?
+        = wcms_component "forms/presentation_data_editor",
+          form: f,
+          schema: f.object.presentation_data_template.schema,
+          presentation_data: f.object.presentation_data
+
+
+  hr
   .form-footer
     .pull-right
       = f.submit 'Save', class: 'btn btn-biola'
       = link_to "Cancel", page_editions_path, class: 'btn btn-link'
     .clearfix
+
+
+javascript:
+  $('#page_edition_site').change(function(){
+    var new_text = this.options[this.selectedIndex].text + '/';
+    $('#site_url_preview').html(new_text);
+  });
