Adding page permissions to PageEdition editor.
relates to WCMS-459. Once we related pages to sites we will add site level permissions.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,5 +14,5 @@
 //====================================
 // Please try to keep this file free of css.
 // Organize css in either application or components.
-// Base stylesheet configuration is in ./settings/_base.scss
+// Base stylesheet configuration is in ./configuration/_base.scss
 //====================================
