--- a/app/views/page_editions/new.html.slim
+++ b/app/views/page_editions/new.html.slim
@@ -1,3 +1,4 @@
-.container
-  h3 New page edition
-  = render 'form'
+.container.page
+  h2.title New Page
+  hr
+  .profile-pages = render 'page_editions/profile_pages/profile'
