--- a/app/views/page_editions/edit.html.slim
+++ b/app/views/page_editions/edit.html.slim
@@ -1,4 +1,12 @@
-.container
-  h3 Edit page edition
-  hr
-  = render 'form'
+.container.page
+  .row
+    .col-sm-3
+      = render 'menu'
+
+    .col-sm-9
+
+      / validate that current user can manage the page
+      - if policy(@page_edition).can_manage?(params[:page])
+        .profile-pages = render profile_page_path
+      - else
+        .alert.alert-danger You do not have permission to manage this view. #{link_to('Back to overview', edit_page_edition_path(@page_edition))}
