--- a/app/views/page_editions/profile_pages/_profile.html.slim
+++ b/app/views/page_editions/profile_pages/_profile.html.slim
@@ -6,6 +6,7 @@
 
     .form-group
       = f.label :site_id, "Site"
+      / The javascript below looks for changes on this and updates the site_url_preview
       = f.collection_select :site_id, Site.all, :id, :url, {}, class: 'form-control'
 
     .form-group
