Adding full list of publishers to publisher index Changing the way the publisher list looks.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,6 +6,7 @@
 
 // Component specific resources
 @import "./components/*";
+@import "./configuration/*";
 
 // Controller or view specific resources
 // @import "./application/*";
