--- a/app/assets/stylesheets/configuration/_bootstrap-customizations.scss
+++ b/app/assets/stylesheets/configuration/_bootstrap-customizations.scss
@@ -23,3 +23,19 @@ form {
   > li:first-child > a { border-radius: 0px; }
   > li:last-child > a { border-radius: 0px; }
 }
+
+.list-group {
+  .group-divider {
+    background: #eee;
+    border: 1px solid #ddd;
+    margin-bottom: -1px;
+    padding: 0 5px;
+    font-size: 11px;
+    font-weight: bold;
+
+    &:first-child {
+      border-top-right-radius: 4px;
+      border-top-left-radius: 4px;
+    }
+  }
+}
