Adding calendar publisher and making fixes to generator

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,7 @@ html lang="en-us"
     #body
       = wcms_component('navigation/site_nav', { menu: [ \
         {body: 'Page Editions', url: :page_editions_path},
+        {body: 'Calendars', url: :calendars_path},
       ]})
 
       = wcms_component('alerts/message_list')
