--- a/lib/generators/publisher/templates/views/index.html.slim
+++ b/lib/generators/publisher/templates/views/index.html.slim
@@ -5,12 +5,12 @@
         = text_field_tag 'q', params[:q], class: 'form-control', placeholder: 'Search', tabindex: '1'
     .pull-right.pad-right
       - if policy(<%= class_name %>).create?
-        = link_to 'New Page', new_<%= singular_table_name %>_path, class: 'btn btn-default'
+        = link_to 'New <%= singular_table_name.titleize %>', new_<%= singular_table_name %>_path, class: 'btn btn-default'
     .clearfix
 
   - if @<%= plural_table_name %>.empty?
     .alert.alert-warning
-      = fa_icon 'warning', text: "No pages were found"
+      = fa_icon 'warning', text: "No <%= plural_name %> were found"
   - else
     = render '<%= plural_table_name %>'
 
