--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,8 +14,9 @@ html lang="en-us"
 
     #body
       = wcms_component('navigation/site_nav', { menu: [ \
-        {body: 'Page Editions', url: :page_editions_path},
         {body: 'Calendars', url: :calendars_path},
+        {body: 'Important Dates', url: :important_dates_path},
+        {body: 'Page Editions', url: :page_editions_path},
       ]})
 
       = wcms_component('alerts/message_list')
