WCMS-467 Added campus locations

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,7 @@ html lang="en-us"
     #body
       = wcms_component('navigation/site_nav', { menu: [ \
         {body: 'Calendars', url: :calendars_path},
+        {body: 'Campus Locations', url: :campus_locations_path},
         {body: 'Important Dates', url: :important_dates_path},
         {body: 'Page Editions', url: :page_editions_path},
       ]})
