--- a/app/views/important_dates/_menu.html.slim
+++ b/app/views/important_dates/_menu.html.slim
@@ -4,4 +4,5 @@
       = @important_date.title
     = menu_block(class: 'list-group-item') do |menu|
       = menu.add_item('Overview', default: true) { edit_important_date_path(@important_date, page: 'profile') }
+      = menu.add_item('History') { edit_important_date_path(@important_date, page: 'activity_logs') } if policy(@important_date).can_manage?(:activity_logs)
 
