--- a/app/views/page_editions/_menu.html.slim
+++ b/app/views/page_editions/_menu.html.slim
@@ -5,4 +5,5 @@
     = menu_block(class: 'list-group-item') do |menu|
       = menu.add_item('Overview', default: true) { edit_page_edition_path(@page_edition, page: 'profile') }
       = menu.add_item('Permissions') {  edit_page_edition_path(@page_edition, page: 'permissions') } if policy(@page_edition).can_manage?(:permissions)
+      = menu.add_item('History') { edit_page_edition_path(@page_edition, page: 'activity_logs') } if policy(@page_edition).can_manage?(:activity_logs)
 
