--- a/app/views/page_editions/_page_editions.html.slim
+++ b/app/views/page_editions/_page_editions.html.slim
@@ -6,6 +6,7 @@
         th Title
         th Site
         th Slug
+        th Status
     tbody
       - @page_editions.each do |page|
         tr
@@ -13,6 +14,4 @@
           td = link_to page.title, page
           td = page.site
           td = page.slug
-          td
-            - if page.published?
-              = fa_icon 'check'
+          td = status_for page
