modified search and added columns for CampusLocation

--- a/app/views/campus_locations/_campus_locations.html.slim
+++ b/app/views/campus_locations/_campus_locations.html.slim
@@ -3,7 +3,11 @@
     thead
       tr
         th Title
+        th R25 ID
+        th Description
     tbody
       - @campus_locations.each do |campus_location|
         tr
           td = link_to campus_location.title, campus_location
+          td = campus_location.external_id
+          td = campus_location.description
