--- a/app/views/campus_locations/profile_pages/_profile.html.slim
+++ b/app/views/campus_locations/profile_pages/_profile.html.slim
@@ -5,7 +5,7 @@
       = f.text_field :name, class: "form-control", placeholder: 'Art 81'
 
     .form-group
-      = f.label :external_id, 'External ID'
+      = f.label :external_id, 'External ID (R25)'
       = f.text_field :external_id, class: "form-control", placeholder: '137'
 
     .form-group
