WCMS- Added state management to Page Editions. Including publish and archival capabilities. Also included a mongoid.yml.example file.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,5 @@
 // Organize css in either application or components.
 // Base stylesheet configuration is in ./configuration/_base.scss
 //====================================
+
+.checkbox-inline { margin: 0; margin-right: 25px; }
