--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
 
 // Controller or view specific resources
 // @import "./application/*";
+@import "./resources/*";
 
 
 //====================================
