WCMS-511 Updated applicable select fields with components gem Still need to update the components gem though..

--- a/app/views/important_dates/profile_pages/_profile.html.slim
+++ b/app/views/important_dates/profile_pages/_profile.html.slim
@@ -32,8 +32,13 @@
 
     .form-group
       = f.label :calendar_ids, "Show on calendars"
-      = wcms_component "forms/multiselect", form: f, attribute: :calendar_ids, collection: Calendar.asc(:title), value_method: :id, text_method: :title
-
+      = wcms_component "forms/multiselect",
+        form: f,
+        attribute: :calendar_ids,
+        collection: Calendar.asc(:title),
+        value_method: :id,
+        text_method: :title,
+        multiple: true
 
   hr
   .form-footer
