Adding menu links, Updating to released buweb code.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,7 @@ html lang="en-us"
         {body: 'Campus Locations', url: :campus_locations_path},
         {body: 'Important Dates', url: :important_dates_path},
         {body: 'Page Editions', url: :page_editions_path},
+        {body: 'Service Links', url: :service_links_path},
       ]})
 
       = wcms_component('alerts/message_list')
@@ -27,4 +28,3 @@ html lang="en-us"
     .container
       .footer
         p ♥ from the Biola Apps team
-
