WCMS-525 added a placeholder to the PageEdition slug field So that the user knows that it will be automatically generated if they leave the field blank\ Also removed un-needed .css from scss files

--- a/app/views/page_editions/profile_pages/_profile.html.slim
+++ b/app/views/page_editions/profile_pages/_profile.html.slim
@@ -13,7 +13,7 @@
       = f.label :slug
       .input-group
         span.input-group-addon#site_url_preview = "#{(f.object.site || Site.first).url}/"
-        = f.text_field :slug, class: 'form-control'
+        = f.text_field :slug, class: 'form-control', placeholder: 'leave blank to autofill'
 
     .form-group
       = f.label :page_template
