--- a/app/views/shared/_permissions_tab.html.slim
+++ b/app/views/shared/_permissions_tab.html.slim
@@ -22,7 +22,7 @@
                   ul.dropdown-menu role="menu" aria-labelledby="dropdownMenu1"
                     li
                       - if actor != current_user
-                        = link_to 'Revoke Permissions', [object, actor], method: :delete, data: { confirm: "Are you sure that you want to revoke #{actor.name}'s permissions?" }, class: 'btn-default'
+                        = link_to 'Revoke Permissions', [obj, actor], method: :delete, data: { confirm: "Are you sure that you want to revoke #{actor.name}'s permissions?" }, class: 'btn-default'
 
                       - else
                         = link_to 'Revoke Permissions', '#', onclick: "alert('You cannot remove your own permissions.')", class: 'btn btn-link'
