WCMS-526 added site category selection to page editions

--- a/app/views/page_editions/profile_pages/_profile.html.slim
+++ b/app/views/page_editions/profile_pages/_profile.html.slim
@@ -1,3 +1,4 @@
+= render 'shared/javascript_multiselect_include', obj: @page_edition, site_categories: @site_categories, site_titles: @site_titles
 = form_for @page_edition do |f|
   .form-section
     .form-group
@@ -7,7 +8,17 @@
     .form-group
       = f.label :site_id, "Site"
       / The javascript below looks for changes on this and updates the site_url_preview
-      = f.collection_select :site_id, Site.where(has_page_editions: true), :id, :url, {}, class: 'form-control'
+      = f.collection_select :site_id, Site.where(has_page_editions: true), :id, :url, {}, class: 'form-control site_multiselect'
+
+    .form-group
+      = f.label :site_categories
+      br
+      - if policy(@page_edition).can_change?(:site_category_ids)
+        .multi_category_select
+          = select_tag 'page_edition[site_category_ids]', options_for_select([], @page_edition.site_category_ids), multiple: true, class: "multiselect"
+      - else
+        .well.well-faux-input
+          = @page_edition.site_categories.join(', ')
 
     .form-group
       = f.label :slug
