WCMS-523 Initial commit. Added Menu components and form.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,7 @@ html lang="en-us"
         {body: 'Calendars', url: :calendars_path},
         {body: 'Campus Locations', url: :campus_locations_path},
         {body: 'Important Dates', url: :important_dates_path},
+        {body: 'Menus', url: :menus_path},
         {body: 'Page Editions', url: :page_editions_path},
         {body: 'Service Links', url: :service_links_path},
       ]})
