updated index and slug fields

--- a/app/views/menus/_menus.html.slim
+++ b/app/views/menus/_menus.html.slim
@@ -3,7 +3,11 @@
     thead
       tr
         th Title
+        th Slug
+        th Site
     tbody
       - @menus.each do |menu|
         tr
           td = link_to menu.title, menu
+          td = menu.slug
+          td = link_to menu.site, menu.site.url
