--- a/app/views/menus/profile_pages/_profile.html.slim
+++ b/app/views/menus/profile_pages/_profile.html.slim
@@ -7,7 +7,8 @@
 
     .form-group
       = f.label :slug
-      = f.text_field :slug, class: 'form-control', placeholder: 'manually set'
+      .pull-right.text-muted = '(manually set)'
+      = f.text_field :slug, class: 'form-control', placeholder: 'example-slug'
 
     .form-group
       = f.label :site_id, "Site"
