--- a/app/views/calendars/new.html.slim
+++ b/app/views/calendars/new.html.slim
@@ -1,4 +1,4 @@
 .container.page
   h2.title New Calendars
   hr
-  .profile-pages = render 'calendars/profile_pages/profile'
+  .edit-partials = render 'calendars/edit_partials/form'
