--- a/app/views/campus_locations/new.html.slim
+++ b/app/views/campus_locations/new.html.slim
@@ -1,4 +1,4 @@
 .container.page
   h2.title New Campus Locations
   hr
-  .profile-pages = render 'campus_locations/profile_pages/profile'
+  .edit-partials = render 'campus_locations/edit_partials/form'
