--- a/app/views/menus/new.html.slim
+++ b/app/views/menus/new.html.slim
@@ -1,4 +1,4 @@
 .container.page
   h2.title New Menus
   hr
-  .profile-pages = render 'menus/profile_pages/profile'
+  .edit-partials = render 'menus/edit_partials/form'
