--- a/app/views/page_editions/new.html.slim
+++ b/app/views/page_editions/new.html.slim
@@ -1,4 +1,4 @@
 .container.page
   h2.title New Page
   hr
-  .profile-pages = render 'page_editions/profile_pages/profile'
+  .edit-partials = render 'page_editions/edit_partials/form'
