--- a/app/views/service_links/new.html.slim
+++ b/app/views/service_links/new.html.slim
@@ -1,4 +1,4 @@
 .container.page
   h2.title New Service Link
   hr
-  .profile-pages = render 'service_links/profile_pages/profile'
+  .edit-partials = render 'service_links/edit_partials/form'
