--- a/lib/generators/publisher/templates/views/new.html.slim
+++ b/lib/generators/publisher/templates/views/new.html.slim
@@ -1,4 +1,4 @@
 .container.page
   h2.title New <%= plural_table_name.titleize %>
   hr
-  .profile-pages = render '<%= plural_table_name %>/profile_pages/profile'
+  .edit-partials = render '<%= plural_table_name %>/edit_partials/form'
