--- a/app/views/important_dates/new.html.slim
+++ b/app/views/important_dates/new.html.slim
@@ -1,4 +1,4 @@
 .container.page
   h2.title New Important Dates
   hr
-  .profile-pages = render 'important_dates/profile_pages/profile'
+  .edit-partials = render 'important_dates/edit_partials/form'
