--- a/app/views/page_editions/edit.html.slim
+++ b/app/views/page_editions/edit.html.slim
@@ -7,11 +7,11 @@
 
       / validate that current user can manage the page
       - if policy(@page_edition).can_manage?(params[:page])
-        .profile-pages 
+        .edit-partials
           - case params[:page]
           - when 'activity_logs'
             = render 'shared/activity_logs', obj: @page_edition
           - else
-            = render profile_page_path
+            = render form_page_path
       - else
         .alert.alert-danger You do not have permission to manage this view. #{link_to('Back to overview', edit_page_edition_path(@page_edition))}
