--- a/app/views/service_links/edit.html.slim
+++ b/app/views/service_links/edit.html.slim
@@ -7,11 +7,11 @@
 
       / validate that current user can manage the page
       - if policy(@service_link).can_manage?(params[:page])
-        .profile-pages 
+        .edit-partials
           - case params[:page]
           - when 'activity_logs'
             = render 'shared/activity_logs', obj: @service_link
           - else
-            = render profile_page_path
+            = render form_page_path
       - else
         .alert.alert-danger You do not have permission to manage this view. #{link_to('Back to overview', edit_service_link_path(@service_link))}
