--- a/lib/generators/publisher/templates/views/edit.html.slim
+++ b/lib/generators/publisher/templates/views/edit.html.slim
@@ -7,6 +7,6 @@
 
       / validate that current user can manage the page
       - if policy(@<%= singular_table_name %>).can_manage?(params[:page])
-        .profile-pages = render profile_page_path
+        .edit-partials = render form_page_path
       - else
         .alert.alert-danger You do not have permission to manage this view. #{link_to('Back to overview', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>))}
