Moving sites into wcms publisher.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,6 +20,7 @@ html lang="en-us"
         {body: 'Menus', url: :menus_path},
         {body: 'Page Editions', url: :page_editions_path},
         {body: 'Service Links', url: :service_links_path},
+        {body: 'Sites', url: :sites_path},
       ]})
 
       = wcms_component('alerts/message_list')
