--- a/app/views/shared/_audience_collection_form.html.slim
+++ b/app/views/shared/_audience_collection_form.html.slim
@@ -27,8 +27,8 @@
                   form: ac,
                   attribute: :schools,
                   collection: AudienceCollection.available_schools.compact,
-                  value_method: :to_s,
-                  text_method: :to_s,
+                  value_method: :id,
+                  text_method: :title,
                   multiple: true
 
           - if AudienceCollection.available_student_levels.compact.present?
@@ -62,9 +62,9 @@
                 = wcms_component "forms/multiselect",
                   form: ac,
                   attribute: :majors,
-                  collection: AudienceCollection.available_majors.compact,
-                  value_method: :to_s,
-                  text_method: :to_s,
+                  collection: AudienceCollection.available_majors,
+                  value_method: :id,
+                  text_method: :full_name,
                   multiple: true
 
           - if AudienceCollection.available_housing_statuses.compact.present?
@@ -99,8 +99,8 @@
                   form: ac,
                   attribute: :departments,
                   collection: AudienceCollection.available_departments.compact,
-                  value_method: :to_s,
-                  text_method: :to_s,
+                  value_method: :id,
+                  text_method: :title,
                   multiple: true
 
         .form-footer
