--- a/app/views/sites/_sites.html.slim
+++ b/app/views/sites/_sites.html.slim
@@ -5,9 +5,11 @@
         th
         th Title
         th Url
+        th Pages
     tbody
       - @sites.each do |site|
         tr
           td
-          td = link_to site.title, site
+          td = link_to site.title, [:edit, site]
           td = link_to site.url, site.url
+          td = link_to 'Pages', site
