--- a/app/views/important_dates/edit_partials/_form.html.slim
+++ b/app/views/important_dates/edit_partials/_form.html.slim
@@ -27,10 +27,6 @@
       = wcms_component "forms/tag_input", form: f, attribute: :categories
 
     .form-group
-      = f.label :audiences
-      = wcms_component "forms/tag_input", form: f, attribute: :audiences
-
-    .form-group
       = f.label :calendar_ids, "Show on calendars"
       = wcms_component "forms/multiselect",
         form: f,
@@ -39,6 +35,108 @@
         value_method: :id,
         text_method: :title,
         multiple: true
+
+    hr
+  .form-section
+    = f.fields_for :audience_collection, @important_date.audience_collection do |ac|
+      h3 Audience Collections
+      .row
+        - if AudienceCollection.available_affiliations.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :affiliations
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :affiliations,
+                collection: AudienceCollection.available_affiliations.compact,
+                value_method: :to_s,
+                text_method: :to_s,
+                multiple: true
+
+        - if AudienceCollection.available_schools.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :schools
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :schools,
+                collection: AudienceCollection.available_schools.compact,
+                value_method: :id,
+                text_method: :title,
+                multiple: true
+
+        - if AudienceCollection.available_student_levels.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :student_levels
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :student_levels,
+                collection: AudienceCollection.available_student_levels.compact,
+                value_method: :to_s,
+                text_method: :to_s,
+                multiple: true
+
+        - if AudienceCollection.available_class_standings.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :class_standings
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :class_standings,
+                collection: AudienceCollection.available_class_standings.compact,
+                value_method: :to_s,
+                text_method: :to_s,
+                multiple: true
+
+        - if AudienceCollection.available_majors.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :majors
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :majors,
+                collection: AudienceCollection.available_majors,
+                value_method: :id,
+                text_method: :full_name,
+                multiple: true
+
+        - if AudienceCollection.available_housing_statuses.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :housing_statuses
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :housing_statuses,
+                collection: AudienceCollection.available_housing_statuses.compact,
+                value_method: :to_s,
+                text_method: :to_s,
+                multiple: true
+
+        - if AudienceCollection.available_employee_types.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :employee_types
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :employee_types,
+                collection: AudienceCollection.available_employee_types.compact,
+                value_method: :to_s,
+                text_method: :to_s,
+                multiple: true
+
+        - if AudienceCollection.available_departments.compact.present?
+          .col-xs-6
+            .form-group
+              = ac.label :departments
+              = wcms_component "forms/multiselect",
+                form: ac,
+                attribute: :departments,
+                collection: AudienceCollection.available_departments.compact,
+                value_method: :id,
+                text_method: :title,
+                multiple: true
+
 
   hr
   .form-footer
